fix(ui): dark mode seed (#1426)
* fix(ui): add dark logo seed

add dark logo seed

* style(ui): adjust notifiction style

adjust notification style

* chore(schemas): set default seed dark mode disabled

set default seed dark mode disabled

--- a/packages/ui/src/containers/AppNotification/index.module.scss
+++ b/packages/ui/src/containers/AppNotification/index.module.scss
@@ -18,7 +18,7 @@
     top: _.unit(-6);
     left: 50%;
     transform: translate(-50%, -100%);
-    width: fit-content;
+    width: max-content;
   }
 }
 
